--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -11,18 +11,18 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/activity_margin_50dp"
-        android:textSize="@dimen/activity_margin_35dp"
+        android:textSize="@dimen/activity_margin_40dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="@dimen/activity_margin_80dp"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:fontFamily="@font/akaya_telivigala"
+        android:fontFamily="@font/allura"
         android:text="Kitchen Stories"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="@dimen/activity_margin_30dp"
-        android:textSize="@dimen/activity_margin_16dp"
+        android:textSize="@dimen/activity_margin_14dp"
         app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintEnd_toEndOf="parent"
         android:textAlignment="center"
