--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -12,18 +12,18 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/activity_margin_50dp"
-        android:textSize="@dimen/activity_margin_35dp"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="@dimen/activity_margin_80dp"
+        android:fontFamily="@font/allura"
+        android:text="@string/kitchen_stories"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:fontFamily="@font/akaya_telivigala"
-        android:text="Kitchen Stories"/>
+        android:textSize="@dimen/activity_margin_40dp"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="@dimen/activity_margin_30dp"
-        android:textSize="@dimen/activity_margin_16dp"
+        android:textSize="@dimen/activity_margin_14dp"
         app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintEnd_toEndOf="parent"
         android:textAlignment="center"
@@ -31,7 +31,7 @@
         android:textColor="@color/black"
         android:layout_marginEnd="@dimen/activity_margin_20dp"
         android:fontFamily="@font/akaya_telivigala"
-        android:text="- Where every dish has a story to tell..."/>
+        android:text="@string/where_every_dish_has_a_story_to_tell"/>
 
     <com.airbnb.lottie.LottieAnimationView
         android:layout_width="match_parent"
