--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -8,26 +8,19 @@
     tools:context=".Dashboard">
 
 
-
-
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/addNewRecipe"
-        android:layout_width="@dimen/activity_margin_80dp"
-        android:layout_height="@dimen/activity_margin_80dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="@dimen/activity_margin_30dp"
-        android:backgroundTint="@color/white"
-        app:cardCornerRadius="@dimen/activity_margin_40dp"
-        app:cardElevation="@dimen/activity_margin_10dp">
-        <com.airbnb.lottie.LottieAnimationView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:weightSum="1"
+        >
+        <ListView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:lottie_loop="true"
-            app:lottie_autoPlay="true"
-            app:lottie_rawRes="@raw/add"
-            />
-    </androidx.cardview.widget.CardView>
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:listSelector="@android:color/transparent"
+            android:divider="@null"
+            android:id="@+id/recipeList"/>
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
